--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.12.0",
     "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
